[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poly_pyhelpers"
version = "0.1.5"
description = "Some useful py methods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests~=2.31",
    "pillow~=10.1.0",
    "io~=0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "responses>=0.23.1"
]

[project.urls]
Homepage = "https://github.com/polyhydra-games/poly-pyhelpers"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["test"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
